picture is showing and its beautiful. next step is to update pixel count

--- a/public/style.css
+++ b/public/style.css
@@ -1,2 +1,19 @@
-
-    
+body {
+    margin: 5px;
+}
+  
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(84, auto);
+    grid-gap: 0px;
+    border: 1px solid white;
+}
+  
+.box {
+    background-color: white;
+    border: 1px solid black;
+    width: 15px;
+    height: 15px;
+    /* padding: 20px; */
+    /* font-size: 150%; */
+}
