--- a/public/style.css
+++ b/public/style.css
@@ -4,8 +4,8 @@ body {
   
 .wrapper {
     display: grid;
-    /* number after repeat in grid-template-columns is the width # of squares */
-    grid-template-columns: repeat(84, auto);
+    /* number after repeat in grid-template-columns is the width (x value ) # of squares */
+    grid-template-columns: repeat(151, auto);
     /* grid-gap: 0px; */
     border: 1px solid white;
 }
