--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,8 @@ body {
   
 .wrapper {
     display: grid;
+    width: 100vw;
+    height: 100vw;
     /* number after repeat in grid-template-columns is the width (x value ) # of squares */
     grid-template-columns: repeat(151, auto);
     /* grid-gap: 0px; */
@@ -11,8 +13,8 @@ body {
 }
   
 .box {
-    background-color: white;
+    /* background-color: white; */
     /* border: 1px solid black; */
-    width: 15px;
-    height: 15px;
+    width: 9px;
+    height: 9px;
 }
